[package]
name = "proofs"
version = "0.1.0"
edition = "2021"
authors = ["Protocol Labs"]
description = "Proofs crate for IPC project"
license = "MIT"

[dependencies]
anyhow = "1.0"
cid = "0.11"
multihash = "0.19"
multihash-codetable = "0.1.4"
fvm_ipld_blockstore = "0.3.1"
fvm_ipld_encoding = "0.5.3"
fvm_ipld_amt = "0.7.4"
fvm_ipld_hamt = "0.10.4"
fvm_shared = "3.13.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11"
hex = "0.4"
base32 = "0.4"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.4"
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.21"

[[bin]]
name = "proofs"
path = "src/main.rs"
