[package]
name = "proofs"
version = "0.1.0"
edition = "2021"
authors = ["Protocol Labs"]
description = "Proofs crate for IPC project"
license = "MIT"

[dependencies]
anyhow = "1.0"
cid = { version = "0.11", features = ["serde", "serde-codec"] }
serde_bytes = "0.11"
serde_tuple = "0.5"
serde_ipld_dagcbor = "0.6"
multihash-codetable = "0.1.4"

fvm_ipld_blockstore = "0.3.1"
fvm_ipld_encoding = "0.5.3"
fvm_ipld_amt = "0.7.4"
fvm_ipld_hamt = "0.10.4"

fvm_shared = "4.7"

# fvm_shared = "3.13.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.4"
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.21"
tiny-keccak = { version = "2.0", features = ["keccak"] }
futures = "0.3"
parking_lot = "0.12"
ethereum-types = "0.14"
sha3 = "0.10"

[[bin]]
name = "proofs"
path = "src/main.rs"
